--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "nodejs-posgresql",
-  "version": "0.0.0",
-  "private": true,
+  "name": "ejs-challenge",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1",
-    "pg": "^8.5.1"
-  },
-  "devDependencies": {
-    "@architect/sandbox": "^3.3.7"
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.3.6"
   }
 }
